--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyfcm = "^1.4.7"
 python-dotenv = "^0.12.0"
 pyzmq = "^19.0.0"
 html5lib = "^1.0.1"
+flasgger = "^0.9.4"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
