--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,14 @@ flasgger = "^0.9.4"
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 flake8 = "^3.7.9"
+isort = "^4.3.21"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
 
 [build-system]
 requires = ["poetry>=0.12"]
