--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^0.12.0"
 pyzmq = "^19.0.0"
 html5lib = "^1.0.1"
 flasgger = "^0.9.4"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
