--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pyzmq = "^19.0.0"
 html5lib = "^1.0.1"
 flasgger = "^0.9.4"
 gunicorn = "^20.0.4"
+flask-caching = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
