--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,31 @@ repository = "https://github.com/corenting/ed-api"
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.63"
+httpx = "^0.17.0"
+pendulum = "^2.1.2"
 pydantic = "^1.8.1"
 uvicorn = {extras = ["standard"], version = "^0.13.4"}
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 flake8 = "^3.8.4"
+flake8-docstrings = "^1.5.0"
+flakehell = "^0.9.0"
 isort = "^5.7.0"
 mypy = "^0.812"
 
 [tool.isort]
 profile = "black"
+multi_line_output = 3
+
+[tool.flakehell]
+format = "grouped"
+max_line_length = 88
+
+[tool.flakehell.plugins]
+pyflakes = ["+*"]
+pycodestyle = ["+*", "-E501"]
+flake8-docstrings = ["+*", "-D100", "-D101", "-D104"]
 
 [build-system]
 requires = ["poetry>=0.12"]
