--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ httpx = "^0.17.0"
 pendulum = "^2.1.2"
 pydantic = "^1.8.1"
 uvicorn = {extras = ["standard"], version = "^0.13.4"}
+environs = "^9.3.1"
+cachier = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -33,7 +35,7 @@ max_line_length = 88
 
 [tool.flakehell.plugins]
 pyflakes = ["+*"]
-pycodestyle = ["+*", "-E501"]
+pycodestyle = ["+*", "-E501", "-W503"]
 flake8-docstrings = ["+*", "-D100", "-D101", "-D104"]
 
 [build-system]
