--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pydantic = "^1.8.1"
 uvicorn = {extras = ["standard"], version = "^0.13.4"}
 environs = "^9.3.1"
 cachier = "^1.5.0"
+alembic = "^1.5.8"
+SQLAlchemy = "^1.4.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
