--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,26 +20,22 @@ alembic = "^1.5.8"
 SQLAlchemy = "^1.4.6"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
-flake8 = "^3.8.4"
-flake8-docstrings = "^1.5.0"
-flakehell = "^0.9.0"
-isort = "^5.7.0"
-mypy = "^0.812"
+black = "^21.5b1"
+flake8 = "*"
+flake8-docstrings = "*"
+isort = "*"
+mypy = "*"
+pdbpp = "^0.10.2"
+pyproject-flake8 = "^0.0.1-alpha.2"
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
 
-[tool.flakehell]
-format = "grouped"
+[tool.flake8]
 max_line_length = 88
-
-[tool.flakehell.plugins]
-pyflakes = ["+*"]
-pycodestyle = ["+*", "-E501", "-W503"]
-flake8-docstrings = ["+*", "-D100", "-D101", "-D104"]
+extend-ignore = "D100,D101,D104,E501,W503"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
