--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ flake8 = "*"
 flake8-docstrings = "*"
 isort = "*"
 mypy = "*"
-pdbpp = "^0.10.2"
-pyproject-flake8 = "^0.0.1-alpha.2"
+pdbpp = "*"
+pyproject-flake8 = "*"
 
 [tool.isort]
 profile = "black"
