--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,16 @@ repository = "https://github.com/corenting/ed-api"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+aiofiles = "^0.7.0"
+alembic = "^1.6.5"
+cachier = "^1.5.0"
+environs = "^9.3.2"
 fastapi = "^0.65.1"
 httpx = "^0.18.1"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
-uvicorn = {extras = ["standard"], version = "^0.13.4"}
-environs = "^9.3.2"
-cachier = "^1.5.0"
-alembic = "^1.6.5"
 SQLAlchemy = "^1.4.17"
+uvicorn = {extras = ["standard"], version = "^0.13.4"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
