--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,18 +10,17 @@ repository = "https://github.com/corenting/ed-api"
 [tool.poetry.dependencies]
 python = "^3.9"
 aiofiles = "^0.7.0"
-alembic = "^1.7.3"
-cachier = "^1.5.0"
-click = "^8.0.1"
-click-loglevel = "^0.4.0"
-environs = "^9.3.3"
-fastapi = "^0.68.1"
+alembic = "^1.7.4"
+cachier = "^1.5.3"
+environs = "^9.3.4"
+fastapi = "^0.70.0"
 gunicorn = "^20.1.0"
-httpx = "^0.19.0"
+httpx = "^0.20.0"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
-pyfcm = "^1.5.1"
+pyfcm = "^1.5.4"
 SQLAlchemy = "^1.4.25"
+typer = "^0.4.0"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 
 [tool.poetry.dev-dependencies]
