commodities: more endpoints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/corenting/ed-api"
 python = "^3.9"
 aiofiles = "^0.7.0"
 alembic = "^1.7.4"
+beautifulsoup4 = "^4.10.0"
 cachier = "^1.5.3"
 environs = "^9.3.4"
 fastapi = "^0.70.0"
