--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pyfcm = "^1.5.4"
 SQLAlchemy = "^1.4.25"
 typer = "^0.4.0"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
+aenum = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
