--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,24 +9,24 @@ repository = "https://github.com/corenting/ed-api"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-aiofiles = "^0.7.0"
-alembic = "^1.7.4"
+aenum = "^3.1.5"
+aiofiles = "^0.8.0"
+alembic = "^1.7.5"
 beautifulsoup4 = "^4.10.0"
-cachier = "^1.5.3"
-environs = "^9.3.4"
-fastapi = "^0.70.0"
+cachier = "^1.5.4"
+environs = "^9.3.5"
+fastapi = "^0.70.1"
 gunicorn = "^20.1.0"
-httpx = "^0.20.0"
+httpx = "^0.21.1"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
 pyfcm = "^1.5.4"
-SQLAlchemy = "^1.4.25"
+SQLAlchemy = "^1.4.28"
 typer = "^0.4.0"
-uvicorn = {extras = ["standard"], version = "^0.15.0"}
-aenum = "^3.1.3"
+uvicorn = {extras = ["standard"], version = "^0.16.0"}
 
 [tool.poetry.dev-dependencies]
-black = "^21.9b0"
+black = "*"
 flake8 = "*"
 flake8-docstrings = "*"
 isort = "*"
