--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,21 +9,21 @@ repository = "https://github.com/corenting/ed-api"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-aenum = "^3.1.5"
+aenum = "^3.1.8"
 aiofiles = "^0.8.0"
 alembic = "^1.7.5"
 beautifulsoup4 = "^4.10.0"
 cachier = "^1.5.4"
-environs = "^9.3.5"
-fastapi = "^0.70.1"
+environs = "^9.4.0"
+fastapi = "^0.73.0"
 gunicorn = "^20.1.0"
-httpx = "^0.21.1"
+httpx = "^0.21.3"
 pendulum = "^2.1.2"
-pydantic = "^1.8.2"
+pydantic = "^1.9.0"
 pyfcm = "^1.5.4"
-SQLAlchemy = "^1.4.28"
+SQLAlchemy = "^1.4.31"
 typer = "^0.4.0"
-uvicorn = {extras = ["standard"], version = "^0.16.0"}
+uvicorn = {extras = ["standard"], version = "^0.17.0.post1"}
 
 [tool.poetry.dev-dependencies]
 black = "*"
