--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,19 +11,19 @@ repository = "https://github.com/corenting/ed-api"
 python = "^3.10"
 aenum = "^3.1.11"
 aiofiles = "^0.8.0"
-alembic = "^1.7.5"
-beautifulsoup4 = "^4.11.0"
+alembic = "^1.8.1"
+beautifulsoup4 = "^4.11.1"
 cachier = "^1.5.4"
-environs = "^9.4.0"
-fastapi = "^0.78.0"
+environs = "^9.5.0"
+fastapi = "^0.81.0"
 gunicorn = "^20.1.0"
 httpx = "^0.23.0"
 pendulum = "^2.1.2"
-pydantic = "^1.9.0"
+pydantic = "^1.9.2"
 pyfcm = "^1.5.4"
-SQLAlchemy = "^1.4.35"
-typer = "^0.4.0"
-uvicorn = {extras = ["standard"], version = "^0.17.0.post1"}
+SQLAlchemy = "^1.4.40"
+typer = "^0.6.1"
+uvicorn = {extras = ["standard"], version = "^0.18.3"}
 
 [tool.poetry.dev-dependencies]
 black = "*"
