--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ beautifulsoup4 = "^4.11.1"
 cachier = "^1.5.4"
 environs = "^9.5.0"
 fastapi = "^0.81.0"
+firebase-admin = "^5.3.0"
 gunicorn = "^20.1.0"
 httpx = "^0.23.0"
 pendulum = "^2.1.2"
 pydantic = "^1.9.2"
-pyfcm = "^1.5.4"
 SQLAlchemy = "^1.4.40"
 typer = "^0.6.1"
 uvicorn = {extras = ["standard"], version = "^0.18.3"}
