--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,40 +8,33 @@ readme = "README.md"
 repository = "https://github.com/corenting/ed-api"
 
 [tool.poetry.dependencies]
-python = "^3.10"
 aenum = "^3.1.11"
 aiofiles = "^22.1.0"
 alembic = "^1.8.1"
 beautifulsoup4 = "^4.11.1"
 cachier = "^1.5.4"
 environs = "^9.5.0"
-fastapi = "^0.85.0"
-firebase-admin = "^5.3.0"
+fastapi = "^0.87.0"
+firebase-admin = "^6.0.1"
 gunicorn = "^20.1.0"
 httpx = "^0.23.0"
+loguru = "^0.6.0"
 pendulum = "^2.1.2"
 pydantic = "^1.10.2"
-SQLAlchemy = "^1.4.41"
-typer = "^0.6.1"
+python = "^3.10"
+SQLAlchemy = "^1.4.44"
+typer = "^0.7.0"
 uvicorn = {extras = ["standard"], version = "^0.18.3"}
 
 [tool.poetry.dev-dependencies]
 black = "*"
-flake8 = "*"
-flake8-docstrings = "*"
-isort = "*"
 mypy = "*"
-pdbpp = "*"
-pyproject-flake8 = "*"
+ruff = "*"
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-
-[tool.flake8]
-max_line_length = 88
-extend-ignore = "D100,D101,D104,E501,W503"
-per-file-ignores = "__init__.py:F401"
+[tool.ruff]
+line-length = 88
+ignore = ["E501"]
+per-file-ignores = {"app/database/__init__.py" = ["F401"]}
 
 [tool.mypy]
 plugins = "pydantic.mypy"
