--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,13 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
       - name: Login to DockerHub
         uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME  }}
           password: ${{ secrets.DOCKER_HUB_TOKEN  }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
