--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,23 +13,24 @@ aenum = "^3.1.15"
 aiofiles = "^23.1.0"
 alembic = "^1.11.1"
 beautifulsoup4 = "^4.12.2"
-cachier = "^2.1.1,!=2.2.0" # see https://github.com/python-cachier/cachier/issues/125
+cachier = "^2.2.1"
 environs = "^9.5.0"
-fastapi = "^0.99.0"
+fastapi = "^0.100.1"
 firebase-admin = "^6.2.0"
-gunicorn = "^20.1.0"
+gunicorn = "^21.2.0"
 httpx = "^0.24.1"
 loguru = "^0.7.0"
-pendulum = "^2.1.2"
-pydantic = "^1.10.10"
-SQLAlchemy = "^2.0.17"
+pydantic = "^2.1.1"
+python-dateutil = "^2.8.2"
+SQLAlchemy = "^2.0.19"
 typer = "^0.9.0"
-uvicorn = {extras = ["standard"], version = "^0.22.0"}
+uvicorn = {extras = ["standard"], version = "^0.23.1"}
 
 [tool.poetry.dev-dependencies]
 black = "*"
 mypy = "*"
 ruff = "*"
+types-python-dateutil = "*"
 
 [tool.ruff]
 line-length = 88
