--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,11 @@ types-python-dateutil = "*"
 
 [tool.ruff]
 line-length = 88
+# Enable pycodestyle (E), Pyflakes (F), flake8-print (T20), ruff rules (RUF),
+# flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
+# pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
+# tryceratops (TRY)
+select = ["E", "F", "T20", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "TRY"]
 ignore = ["E501"]
 per-file-ignores = {"app/database/__init__.py" = ["F401"]}
 
