--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,23 +8,23 @@ readme = "README.md"
 repository = "https://github.com/corenting/ed-api"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 aenum = "^3.1.15"
-aiofiles = "^23.1.0"
-alembic = "^1.11.1"
-beautifulsoup4 = "^4.12.2"
-cachier = "^2.2.1"
-environs = "^9.5.0"
-fastapi = "^0.100.1"
-firebase-admin = "^6.2.0"
+aiofiles = "^23.2.1"
+alembic = "^1.13.1"
+beautifulsoup4 = "^4.12.3"
+cachier = "^2.2.2"
+environs = "^10.3.0"
+fastapi = "^0.109.2"
+firebase-admin = "^6.4.0"
 gunicorn = "^21.2.0"
-httpx = "^0.24.1"
-loguru = "^0.7.0"
-pydantic = "^2.1.1"
+httpx = "^0.26.0"
+loguru = "^0.7.2"
+pydantic = "^2.6.1"
 python-dateutil = "^2.8.2"
-SQLAlchemy = "^2.0.19"
+SQLAlchemy = "^2.0.25"
 typer = "^0.9.0"
-uvicorn = {extras = ["standard"], version = "^0.23.1"}
+uvicorn = {extras = ["standard"], version = "^0.27.0.post1 "}
 
 [tool.poetry.dev-dependencies]
 black = "*"
@@ -34,6 +34,8 @@ types-python-dateutil = "*"
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 # Enable pycodestyle (E), Pyflakes (F), flake8-print (T20), ruff rules (RUF),
 # flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
 # pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
