--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["corenting <corenting@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/corenting/ed-api"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
