--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ cachier = "^2.2.2"
 environs = "^10.3.0"
 fastapi = "^0.109.2"
 firebase-admin = "^6.4.0"
-gunicorn = "^21.2.0"
+gunicorn = "^22.0.0"
 httpx = "^0.26.0"
 loguru = "^0.7.2"
 pydantic = "^2.6.1"
@@ -28,12 +28,12 @@ typer = "^0.9.0"
 uvicorn = {extras = ["standard"], version = "^0.27.0.post1 "}
 
 [tool.poetry.dev-dependencies]
-black = "*"
 mypy = "*"
 ruff = "*"
 types-python-dateutil = "*"
 
 [tool.ruff]
+target-version = "py312"
 line-length = 88
 
 [tool.ruff.lint]
@@ -43,7 +43,9 @@ line-length = 88
 # tryceratops (TRY)
 select = ["E", "F", "T20", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "TRY"]
 ignore = ["E501"]
-per-file-ignores = {"app/database/__init__.py" = ["F401"]}
+
+[tool.ruff.lint.per-file-ignores]
+"app/database/__init__.py" = ["F401"]
 
 [tool.mypy]
 plugins = "pydantic.mypy"
