--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,45 @@
-[tool.poetry]
+[project]
 name = "ed-api"
 version = "4.2.1"
 description = "An API for Elite Dangerous"
-authors = ["corenting <corenting@gmail.com>"]
-license = "MIT"
+authors = [
+    { name = "Corentin Garcia", email = "corenting@gmail.com" }
+]
+license = { text = "MIT" }
 readme = "README.md"
+requires-python = ">=3.13,<4.0"
+dependencies = [
+    "aenum (>=3,<4)",
+    "aiofiles (>=24,<25)",
+    "alembic (>=1,<2)",
+    "beautifulsoup4 (>=4,<5)",
+    "cachier (>=3,<4)",
+    "environs (>=14,<15)",
+    "fastapi (>=0.115.11,<1)",
+    "firebase-admin (>=6,<7)",
+    "gunicorn (>=23,<24)",
+    "httpx (>=0.28.1,<1)",
+    "loguru (>=0.7.3,<1)",
+    "pydantic (>=2,<3)",
+    "python-dateutil (>=2,<3)",
+    "SQLAlchemy (>=2,<3)",
+    "typer (>=0.15.1,<1.0.0)",
+    "uvicorn[standard] (>=0.34.0,<1.0.0)",
+]
+
+[project.urls]
 repository = "https://github.com/corenting/ed-api"
+
+[tool.poetry]
 package-mode = false
 
-[tool.poetry.dependencies]
-python = "^3.13"
-aenum = ">=3,<4"
-aiofiles = ">=24,<25"
-alembic = ">=1,<2"
-beautifulsoup4 = ">=4,<5"
-cachier = ">=3,<4"
-environs = ">=11,<12"
-fastapi = "<1"
-firebase-admin = ">=6,<7"
-gunicorn = ">=23,<24"
-httpx = "<1"
-loguru = "<1"
-pydantic = ">=2,<3"
-python-dateutil = ">=2,<3"
-SQLAlchemy = ">=2,<3"
-typer = "<1"
-uvicorn = {extras = ["standard"], version = "<1"}
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 mypy = "*"
 ruff = "*"
 types-python-dateutil = "*"
 
 [tool.ruff]
-target-version = "py312"
+target-version = "py313"
 line-length = 88
 
 [tool.ruff.lint]
@@ -53,5 +59,5 @@ ignore_missing_imports = true
 disallow_untyped_defs = true
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
