--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,19 @@ updates:
   directory: "/"
   schedule:
     interval: "weekly"
+  commit-message:
+      prefix: "chore"
+  groups:
+    production-dependencies:
+      dependency-type: "production"
+    development-dependencies:
+      dependency-type: "development"
+- package-ecosystem: "github-actions"
+  directory: "/"
+  schedule:
+    interval: "weekly"
+  commit-message:
+      prefix: "chore"
   groups:
     production-dependencies:
       dependency-type: "production"
